Footer gutter and layout fixes - use correct body2 size for address and copyright - set gutter padding to match design (and header) - fix layout spacing at narrow desktop sizes (960-1000px)

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -19,6 +19,10 @@
   align-items: center;
 }
 
+.footerNavigation {
+  flex: 0 0;
+}
+
 .footerLinks {
   display: flex;
   justify-content: center;
@@ -67,18 +71,21 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .footer {
-    padding-inline: 40px;
+    padding-inline: 39px;
   }
+
   .footerInfo {
     flex-direction: row;
     justify-content: space-between;
     width: 98%;
   }
+
   .socialContent {
     flex-direction: row;
     justify-content: space-between;
     width: 98%;
   }
+
   .footerLinks {
     justify-content: flex-start;
   }
@@ -91,23 +98,36 @@
 @media (min-width: 960px) {
   .footer {
     flex-direction: row;
-    padding-inline: 5rem;
-    height: 200px;
+    padding-inline: 165px;
     padding-block: 48px;
   }
+
   .footerInfo {
     justify-content: flex-start;
     gap: 60px;
+    max-width: 730px;
   }
+
+  .footerLinks {
+    margin-bottom: 0;
+  }
+
   .location {
     text-align: left;
+    margin-bottom: 0;
+    width: 200px;
   }
 
   .socialContent {
     flex-direction: column;
     align-items: flex-end;
   }
+
   .socialLinks {
     margin-bottom: 40px;
+  }
+
+  .copyright {
+    text-align: right;
   }
 }
